# discourse-sso-oidc-bridge

./: .coveragerc  .pre-commit-config.yaml  AUTHORS  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
discourse_sso_oidc_bridge/: __init__.py  app.py  default_config.py  group_processor.py
discourse_sso_oidc_bridge/templates/: 403.html
tests/: test_app.py
