[tool.poetry]
name = "discourse-sso-oidc-bridge"
version = "2.0.0"
description = "A Flask app, wrapping a single OpenID Connect issuer with a Discourse SSO provider interface."
authors = ["Erik Sundell <erik+pypi@sundellopensource.se>", "Thore <thore@scimeda.de"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
healthcheck = "^1.3.3"
Flask-pyoidc = { git = "https://github.com/ThoreKr/Flask-pyoidc.git", rev = "0a48026" }
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pip-tools = "^6.4.0"
pytest = "^6.2.5"
urllib3 = "^1.26.7"
coverage = "^6.0.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
