[tool.poetry]
name = "discourse-sso-oidc-bridge"
version = "2.0.0"
description = "A Flask app, wrapping a single OpenID Connect issuer with a Discourse SSO provider interface."
authors = ["Erik Sundell <erik+pypi@sundellopensource.se>", "Thore <thore@scimeda.de"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
Flask-pyoidc = "^3.14.3"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pip-tools = "^7.4.1"
pytest = "^8.1.1"
urllib3 = "^2.2.1"
coverage = "^7.4.3"
black = "^24.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore-init-module-imports = true
